新增burger按钮切换

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#service">服务流程</a>
             <a href="#team-intro">团队介绍</a>
             <a href="#company-activities">公司动态</a>
-            <a href="#"><i class="fa fa-search-plus fa-x2" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-search-plus fa-2x" aria-hidden="true"></i></a>
         </nav>
         <div class="burger">
             <i class="fa fa-bars fa-3x" style="color: cyan;" ></i>
